--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,22 +1,13 @@
 # main links links
 main:
-  - title: "Publications"
-    url: /publications/
+  - title: "research"
+    url: /research/
 
-  - title: "Talks"
-    url: /talks/    
+  - title: "teaching"
+    url: /teaching
 
-  - title: "Teaching"
-    url: /teaching/    
-    
-  - title: "Portfolio"
-    url: /portfolio/
-        
-  - title: "Blog Posts"
+  - title: "blog"
     url: /year-archive/
     
-  - title: "CV"
+  - title: "cv"
     url: /cv/
-    
-  - title: "Guide"
-    url: /markdown/
